crates/sui-prover/tests/snapshots/spec_purity/spec_purity_event_module.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 151
expression: output
---
exiting with bytecode transformation errors in spec_purity_analysis
error: Spec function is calling a network module
   ┌─ tests/inputs/spec_purity/spec_purity_event_module.move:30:9
   │
30 │         subcheck(x);
   │         ^^^^^^^^^^^
